--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
     <head>
 
@@ -8,5 +8,4 @@
         <h1>Hello world</h1>
         <p>This is Nojdaz fanpage</p>
     </body>
-
 </html>
