--- a/Index.html
+++ b/Index.html
@@ -7,5 +7,6 @@
     <body>
         <h1>Hello world</h1>
         <p>This is Nojdaz fanpage</p>
+        <h2>This is a test</h2>
     </body>
 </html>
