--- a/Index.html
+++ b/Index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <title>Nojdaz</title>
+        <link href="assets/style.css" rel="stylesheet" type="text/css" />
     </head>
 
     <body>
-        <h1>Hello world</h1>
-        <p>This is Nojdaz fanpage</p>
-        <h2>This is a test</h2>
+        <ul>
+            <li>
+            <div class="logo">
+                <img src="assets/logo.png" width="30" height="30">
+                <h1>Nojdaz</h1>
+            </div>
+            </li>
+            <li class="navitem-right">
+                <a href="mailto:Nojdaz@gmail.com">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
+                    <polyline points="22,6 12,13 2,6"></polyline>
+                  </svg>
+                </a>
+            </li>
+            <li class="navitem-right">
+                <a href="https://github.com/Nojdaz">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
+                  </svg>
+                </a>
+              </li>
+            <li class="navitem-right"><a href="#home">Home</a></li>
+            <li class="navitem-right"><a href="#news">News</a></li>
+            <li class="navitem-right"><a href="#contact">Contact</a></li>
+            <li class="navitem-right"><a href="#about">About</a></li>
+        </ul>
+        <div class="containers">
+        </div>
     </body>
 </html>
